# PlusMarked

./: .gitignore  Cargo.toml  LICENSE  README.md  package.json
.github/workflows/: ci.yml
apps/desktop/: package-lock.json  package.json  vite.config.ts
apps/desktop/src/: app.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/lib/: BasesView.svelte  CanvasView.svelte  MarkdownPlusEditor.svelte  api.ts  types.ts
apps/desktop/src/routes/: +page.svelte
crates/mdp-core/: Cargo.toml
crates/mdp-core/src/: lib.rs
crates/mdp-db/: Cargo.toml
crates/mdp-db/src/: lib.rs
crates/mdp-workspace/: Cargo.toml
crates/mdp-workspace/src/: lib.rs
docs/: building.md
docs/specs/: markdownplus.md  workspaces.md
