[workspace]
members = [
  "crates/mdp-core",
  "crates/mdp-db",
  "crates/mdp-workspace",
  "apps/desktop/src-tauri",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"
repository = "https://github.com/astraea-oss/MarkdownPlus"

[workspace.dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
dunce = "1"
noyalib = "0.0.7"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"
uuid = { version = "1", features = ["serde", "v7"] }
